docs(jdbc): jdbc release 3.7.8 Closes TD-38643

--- a/docs/zh/14-reference/05-connector/14-java.mdx
+++ b/docs/zh/14-reference/05-connector/14-java.mdx
@@ -33,6 +33,7 @@ TDengine TSDB 的 JDBC 驱动实现尽可能与关系型数据库驱动保持一
 
 | taos-jdbcdriver 版本 |                                                                        主要变化                                                                        |   TDengine TSDB 版本    |
 | ------------------| ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------- |
+|        3.7.8        | 解决了 getTables 方法中需要使用转义符的问题。   |   -  |
 |        3.7.7        | 1. 解决了 windows 平台加载配置文件问题<br/> 2. 解决了 WebSocket 连接 Statement 超时设置互相影响问题。   |   -  |
 |        3.7.6        | 优化了 WebSocket 连接负载均衡实现和参数绑定 setObject 接口    |   -  |
 |        3.7.5        | 1. WebSocket 连接支持负载均衡 <br/> 2. 自动重连支持参数绑定 <br/> 3. 优化了高效写入序列化性能 <br/> 4. 优化了 WebSocket 连接 isValid 性能      |   -  |
