--- a/docs/zh/28-releases/03-notes/3.3.8.0.md
+++ b/docs/zh/28-releases/03-notes/3.3.8.0.md
@@ -8,7 +8,7 @@ description: 3.3.8.0 版本说明
 
   1. 特性：支持 Rollup SMA
   2. 特性：使用重构后的流计算重新实现 TSMA
-  3. 特性: TDgpt 支持 PROPHET 算法
+  3. 特性：TDgpt 支持 PROPHET 算法
   4. 特性：TDgpt 支持 Pearson 相关系数计算函数
   5. 特性：TDgpt 支持数据补全功能
   6. 特性：支持 if、isnull、isnotnull、nvl、collesce、nullif、ifnull 函数
@@ -77,7 +77,7 @@ description: 3.3.8.0 版本说明
  14. 修复：C ws 使用与 C native 同名日志文件
  15. 修复：STMT 查询错误引发的内存泄漏
  16. 修复：taosAdapter JSON 序列化包含非预期的转义
- 17. 修复：Explorer创建PI任务失败
+ 17. 修复：Explorer 创建 PI 任务失败
  18. 修复：流计算开启 FILL_HISTORY 选项时第一个窗口计算错误的问题
  19. 修复：流计算的手工重算逻辑错误
  20. 修复：流计算中数据乱序、数据删除时计算结果错误的问题
