--- a/docs/en/06-advanced/05-data-in/03-pi.md
+++ b/docs/en/06-advanced/05-data-in/03-pi.md
@@ -34,7 +34,7 @@ Users configure the data mapping rules from PI to TDengine through a CSV file, r
 
 In the data writing page, click the **+Add Data Source** button to enter the add data source page.
 
-![](../../assets/pi-system-01.png)
+![Add data source](../../assets/pi-system-01.png)
 
 ### Basic Configuration
 
@@ -46,7 +46,7 @@ If the taosX service is running on or can directly connect to the server where t
 
 Select a target database from the **Target Database** dropdown list, or click the **+Create Database** button on the right to create a new database.
 
-![](../../assets/pi-system-02.png)
+![Configure basic settings](../../assets/pi-system-02.png)
 
 ### Connection Configuration
 
@@ -54,11 +54,11 @@ The PI connector supports two connection methods:
 
 1. **PI Data Archive Only**: Does not use AF mode. In this mode, directly fill in the **PI Service Name** (server address, usually using the hostname).
 
-   ![](../../assets/pi-system-03.png)
+   ![Configure PI Data Archive connection](../../assets/pi-system-03.png)
 
 2. **PI Data Archive and Asset Framework (AF) Server**: Uses AF SDK. In addition to configuring the service name, this mode also requires configuring the PI system (AF Server) name (hostname) and AF database name.
 
-   ![](../../assets/pi-system-04.png)
+   ![Configure PI Data Archive and Asset Framework connection](../../assets/pi-system-04.png)
 
 Click the **Connectivity Check** button to verify if the data source is available.
 
