docs: improve formatting and fix typos in 3.3.8 release notes

--- a/docs/en/28-releases/03-notes/3.3.8.8.md
+++ b/docs/en/28-releases/03-notes/3.3.8.8.md
@@ -6,10 +6,12 @@ slug: /release-history/release-notes/3.3.8.8
 ---
 
 ## Features
+
   1. feat: taosX add KingHistorian data-in
   2. feat: taosX add new datasource: pulsar & tuya
 
 ## Enhancements
+
   1. enh: active-active support enable WAL marker to lock WAL
   2. enh: C WebSocket connector performance optimized
   3. enh: improve startup speed of stream with historical data
@@ -18,7 +20,7 @@ slug: /release-history/release-notes/3.3.8.8
   6. enh: clarified error messages for white noise check failures in the data completion algorithm
   7. enh: enhanced error messages for unresolvable or unreachable hostnames to indicate the root cause more clearly.
   8. enh: add status and description fields to TDgpt's ins_anodes_full table for real-time feedback on model and algorithm status.
-  9. enh: taosX 数据迁移支持 conn_timeout
+  9. enh: taosX data migration supports conn_timeout
  10. enh: Add debug commands like vi, ps, etc. to Docker
  11. enh: improve corner case memory usage to avoid oom
  12. enh: taosX improve mem usage and speedup for flat stream
@@ -37,6 +39,7 @@ slug: /release-history/release-notes/3.3.8.8
  25. enh: taosX support reclaim memory by interval or sighup
 
 ## Fixes
+
   1. fix: event window of stream does not create output table when no data output.
   2. fix: taosX data synchronization included extra non-qualifying table structures.
   3. fix: fix a mem-leak issue of taosBenchmark
@@ -58,7 +61,7 @@ slug: /release-history/release-notes/3.3.8.8
  19. fix: virtual table stream does not trigger computing as expected
  20. fix: time resolution processing error in TDgpt's Prophet algorithm model
  21. fix: query result error when the state window's extend value is 1 and the end of the window is all empty data.
- 22. fix: explorer input eror when extract or filter preview
+ 22. fix: explorer input eroro when extract or filter preview
  23. fix: taosX fix mem increase and panic in archive in case of taosd errors
  24. fix: fix schema only backup restore error
  25. fix: crash caused by memory cleanup when sync message sending fails
@@ -75,6 +78,5 @@ slug: /release-history/release-notes/3.3.8.8
  36. fix: stream repeatedly reports window opening events after restart
  37. fix: upgrade arrow dependencies for jdk21
  38. fix: reduce OpenTSDB log file size for taosX
- 39. fix: InfluxDB data source table name inconsit with disorder tags
+ 39. fix: InfluxDB data source table name inconsistent with disorder tags 
  40. fix: error writing BLOB data type via super table auto-creation statements.
-
