--- a/docs/zh/28-releases/03-notes/3.3.8.8.md
+++ b/docs/zh/28-releases/03-notes/3.3.8.8.md
@@ -5,15 +5,17 @@ description: 3.3.8.8 版本说明
 ---
 
 ## 特性
+
   1. 特性：taosX 支持 KingHistorian 数据迁移
   2. 特性：taosX 添加 Pulsar/Tuya 数据源
 
 ## 优化
-  1. 优化：双活支持标记 WAL 订阅完比后再允许删除
-  2. 优化：C  WebSocket 连接器订阅性能优化
+
+  1. 优化：双活支持标记 WAL 订阅完毕后再允许删除
+  2. 优化：C WebSocket 连接器订阅性能优化
   3. 优化：提升存在历史数据的流计算启动速度
   4. 优化：支持在流计算中缓存标签等值条件的过滤结果
-  5. 优化：C/Rust WebSocket 链接支持 conn_timeout 参数
+  5. 优化：C/Rust WebSocket 连接支持 conn_timeout 参数
   6. 优化：在数据补全算法中明确白噪音检查失败的错误信息。
   7. 优化：因 hostname 无法解析或连接时的错误信息，使其更清晰地指示问题根源
   8. 优化：TDgpt 的数据补全算法支持任意采样间隔
@@ -23,25 +25,26 @@ description: 3.3.8.8 版本说明
  12. 优化：taosX flat 数据入库内存和性能优化
  13. 优化：Explorer 列提取生成的新列可继续提取或拆分
  14. 优化：新增 maxSQLLength 设置 SQL 语句的最大长度
- 15. 优化：Rust WS连接器添加超时参数
+ 15. 优化：Rust WS 连接器添加超时参数
  16. 优化：taosX 归档文件支持个数和大小限制
  17. 优化：简化查询重试逻辑，统一采用 maxRetryWaitTimes 来控制最长重试时间
  18. 优化：移除 OPCDA 位点打印 INFO 级别日志
  19. 优化：OpenTSDB 导入支持自定义子表名
  20. 优化：TMQ 同步时遇表不存在跳过部分查询
  21. 优化：taosX 批量导入 CSV 优化
- 22. 优化：提升在多 vnode 且需数据同步的集群中重启后的恢复速度。
+ 22. 优化：提升在多 vnode 且需数据同步的集群中重启后的恢复速度
  23. 优化：允许 TMQ 订阅写入低版本数据库
  24. 优化：taosX 数据迁移支持额外的 WHERE 条件
  25. 优化：taosX 定时和按需内存回收
 
 ## 修复
-  1. 修复：流计算的事件窗口在无数据输出时未创建输出表的问题。
-  2. 修复: taosX 数据同步时多同步了不符合条件的表结构
+
+  1. 修复：流计算的事件窗口在无数据输出时未创建输出表的问题
+  2. 修复：taosX 数据同步时多同步了不符合条件的表结构
   3. 修复：taosBenchmark 内存泄漏
   4. 修复：流计算 DELETE 触发重算中 Trigger 对 NULL 值处理异常的问题
   5. 修复：流计算状态窗口历史数据触发不支持 extend 参数的问题
-  6. 修复: 3.3.7 升级至 3.3.8 版本的流计算兼容性问题。
+  6. 修复：3.3.7 升级至 3.3.8 版本的流计算兼容性问题。
   7. 修复：状态窗口在数据块边界为空值时计算结果错误的问题
   8. 修复：RSMA 功能中时间戳为负数时窗口切分不正确的问题
   9. 修复：双副本 mnode 切主失败的问题
@@ -52,10 +55,10 @@ description: 3.3.8.8 版本说明
  14. 修复：MQTT 订阅退出时的内存泄漏
  15. 修复：解决流计算中引用虚拟表时的内存泄漏问题
  16. 修复：解决虚拟超级表不支持 SELECT COUNT(1) 查询的问题
- 17. 修复：解决 DERIVATIVE 函数在查询中包含 tbname列时，结果集比预期多出一行的问题。
+ 17. 修复：解决 DERIVATIVE 函数在查询中包含 tbname 列时，结果集比预期多出一行的问题
  18. 修复：Docker 镜像修改 taosd 密码后升级启动失败的问题，影响版本 3.3.8.0–3.3.8.4
  19. 修复：虚拟表流计算未按预期触发计算的问题
- 20. 修复: TDgpt Prophet 算法模型的时间分辨率处理错误
+ 20. 修复：TDgpt Prophet 算法模型的时间分辨率处理错误
  21. 修复：状态窗口 extend 值为 1 且窗口结尾全为空数据时的查询结果错误
  22. 修复：Explorer 拆分和过滤规则预览时输入不符合预期
  23. 修复：taosX 错误消息过长导致的内存增长和 Panic 问题
@@ -76,4 +79,3 @@ description: 3.3.8.8 版本说明
  38. 修复：减小 OpenTSDB 数据源日志文件大小
  39. 修复：InfluxDB 修复子表名 Tag 顺序导致不一致的问题
  40. 修复：超级表自动建表语句写入 BLOB 数据类型错误
-
