docs: update 3.3.8.8 release notes for clarity and consistency

--- a/docs/en/28-releases/03-notes/3.3.8.8.md
+++ b/docs/en/28-releases/03-notes/3.3.8.8.md
@@ -18,8 +18,8 @@ slug: /release-history/release-notes/3.3.8.8
   4. enh: support caching filter results of tag equality conditions in stream
   5. enh: c/rust websocket connection support conn_timeout
   6. enh: clarified error messages for white noise check failures in the data completion algorithm
-  7. enh: enhanced error messages for unresolvable or unreachable hostnames to indicate the root cause more clearly.
-  8. enh: add status and description fields to TDgpt's ins_anodes_full table for real-time feedback on model and algorithm status.
+  7. enh: enhanced error messages for unresolvable or unreachable hostnames to indicate the root cause more clearly
+  8. enh: TDgpt's imputation function supports arbitrary sampling intervals
   9. enh: taosX data migration supports conn_timeout
  10. enh: Add debug commands like vi, ps, etc. to Docker
  11. enh: improve corner case memory usage to avoid oom
@@ -60,7 +60,7 @@ slug: /release-history/release-notes/3.3.8.8
  18. fix: Resolved Docker image upgrade start-up failure after changing the taosd password, affecting versions 3.3.8.0–3.3.8.4
  19. fix: virtual table stream does not trigger computing as expected
  20. fix: time resolution processing error in TDgpt's Prophet algorithm model
- 21. fix: query result error when the state window's extend value is 1 and the end of the window is all empty data.
+ 21. fix: query result error when the state window's extend value is 1 and the end of the window is all empty data
  22. fix: explorer input eroro when extract or filter preview
  23. fix: taosX fix mem increase and panic in archive in case of taosd errors
  24. fix: fix schema only backup restore error
@@ -79,4 +79,4 @@ slug: /release-history/release-notes/3.3.8.8
  37. fix: upgrade arrow dependencies for jdk21
  38. fix: reduce OpenTSDB log file size for taosX
  39. fix: InfluxDB data source table name inconsistent with disorder tags
- 40. fix: error writing BLOB data type via super table auto-creation statements.
+ 40. fix: error writing BLOB data type via super table auto-creation statements
