docs: update installation guides for TDengine TSDB-OSS Client to version 3.3.8.8

--- a/docs/en/assets/resources/_linux_install.mdx
+++ b/docs/en/assets/resources/_linux_install.mdx
@@ -1,12 +1,12 @@
-import PkgListV3 from "/components/PkgListV3";
+import PkgListV37 from "/components/PkgListV37";
 
 1. Download the client installation package
-  
-  <PkgListV3 type={1} sys="Linux" />
+
+  <PkgListV37 productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="Linux-Generic" pkgType="Client"/>
 
 2. Unzip the software package
 
-   Place the package in any directory where the current user has read and write access, then execute the following command: `tar -xzvf TDengine-client-VERSION.tar.gz`
+   Place the package in any directory where the current user has read and write access, then execute the following command: `tar -xzvf tdengine-tsdb-oss-client-3.3.8.8-linux-x64.tar.gz`
    Replace VERSION with the actual version string.
 3. Run the installation script
 
