--- a/docs/en/assets/resources/_macos_install.mdx
+++ b/docs/en/assets/resources/_macos_install.mdx
@@ -1,8 +1,8 @@
-import PkgListV3 from "/components/PkgListV3";
+import PkgListV37 from "/components/PkgListV37";
 
 1. Download the client installation package
 
-   <PkgListV3 type={8} sys="macOS" />
+  <PkgListV37 productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="macOS" pkgType="Client"/>
 
 2. Run the installer and follow the prompts to select the default values to complete the installation. If the installation is blocked, you can right-click or press Ctrl and click on the installation package, then choose `Open`.
 3. Configure taos.cfg
