--- a/docs/en/assets/resources/_windows_install.mdx
+++ b/docs/en/assets/resources/_windows_install.mdx
@@ -1,8 +1,8 @@
-import PkgListV3 from "/components/PkgListV3";
+import PkgListV37 from "/components/PkgListV37";
 
 1. Download the client installation package
 
-   <PkgListV3 type={4} sys="Windows" />
+  <PkgListV37 productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="Windows" pkgType="Client"/>
  
 2. Run the installer, follow the prompts to select the default values, and complete the installation
 3. Installation path
