--- a/docs/zh/14-reference/05-connector/_linux_install.mdx
+++ b/docs/zh/14-reference/05-connector/_linux_install.mdx
@@ -1,13 +1,12 @@
 import PkgListV37 from "/components/PkgListV37";
 
 1. 下载客户端安装包
-  
-  <PkgListV37 productName="TDengine TSDB-Enterprise" version="3.3.8.4" platform="Linux-Generic" pkgType="Client"/>
-  <PkgListV37 productName="TDengine TSDB-OSS" version="3.3.8.4" platform="Linux-Generic" pkgType="Client"/>
+
+  <PkgListV37 productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="Linux-Generic" pkgType="Client"/>
 
 2. 解压缩软件包
 
-   将软件包放置在当前用户可读写的任意目录下，然后执行下面的命令：`tar -xzvf tdengine-tsdb-enterprise-client-3.3.8.4-linux-x64.tar.gz`
+   将软件包放置在当前用户可读写的任意目录下，然后执行下面的命令：`tar -xzvf tdengine-tsdb-oss-client-3.3.8.8-linux-x64.tar.gz`
    其中 VERSION 需要替换为实际版本的字符串。
 
 3. 执行安装脚本
