--- a/docs/zh/14-reference/05-connector/_macos_install.mdx
+++ b/docs/zh/14-reference/05-connector/_macos_install.mdx
@@ -1,8 +1,8 @@
-import PkgListV3 from "/components/PkgListV3";
+import PkgListV37 from "/components/PkgListV37";
 
 1. 下载客户端安装包
-
-   <PkgListV3 type={8} sys="macOS" />
+  
+  <PkgListV37 productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="macOS" pkgType="Client"/>
 
 2. 执行安装程序，按提示选择默认值，完成安装。如果安装被阻止，可以右键或者按 Ctrl 点击安装包，选择 `打开`。
 3. 配置 taos.cfg
