--- a/docs/en/assets/resources/_icinga2.mdx
+++ b/docs/en/assets/resources/_icinga2.mdx
@@ -25,8 +25,8 @@ Method to configure taosAdapter to receive icinga2 data:
 
 #### Configuring icinga2
 
-- Enable icinga2's opentsdb-writer (reference link https://icinga.com/docs/icinga-2/latest/doc/14-features/#opentsdb-writer)
-- Modify the configuration file `/etc/icinga2/features-enabled/opentsdb.conf` filling in \<taosAdapter's host> with the domain name or IP address of the server running taosAdapter, \<port for icinga2> with the corresponding port supported by taosAdapter for receiving icinga2 data (default is 6048)
+- Enable icinga2's opentsdb-writer [reference link](https://icinga.com/docs/icinga-2/latest/doc/14-features/#opentsdb-writer)
+- Modify the configuration file `/etc/icinga2/features-enabled/opentsdb.conf` filling in `<taosAdapter's host>` with the domain name or IP address of the server running taosAdapter, `<port for icinga2>` with the corresponding port supported by taosAdapter for receiving icinga2 data (default is 6048)
 
     ```c
     object OpenTsdbWriter "opentsdb" {
