docs: update nodejs docs

--- a/docs/zh/14-reference/05-connector/35-node.mdx
+++ b/docs/zh/14-reference/05-connector/35-node.mdx
@@ -23,6 +23,7 @@ Node.js 连接器源码托管在 [GitHub](https://github.com/taosdata/taos-conne
 
 | Node.js 连接器 版本 |          主要变化         |   TDengine TSDB 版本    |
 | ------------------| ----------------------| ----------------|
+|        3.2.2       | 修复 Windows 系统上的时区处理问题 | - |
 |        3.2.1       | 修复 SQL 查询结果排序问题 | - |
 |        3.2.0       | 优化 stmt 参数绑定，提升写入效率 | - |
 |        3.1.9       | 修复 WebSocket 连接的时区设置问题 | - |
