--- a/docs/zh/05-programming/01-connect/03-go.md
+++ b/docs/zh/05-programming/01-connect/03-go.md
@@ -11,7 +11,7 @@ import TabItem from '@theme/TabItem';
 <!-- exclude-end -->
 ## 初始化模块
 
-```
+```bash
 go mod init tdengine.com/example
 ```
 
@@ -50,7 +50,6 @@ $env:TDENGINE_GO_DSN='<goDSN>'
 
 </TabItem>
 </Tabs>
-
 
 <!-- exclude -->
 :::note IMPORTANT
