--- a/docs/zh/06-advanced/05-data-in/15-oracle.mdx
+++ b/docs/zh/06-advanced/05-data-in/15-oracle.mdx
@@ -105,4 +105,4 @@ import Contributing from './_03-exception-handling-strategy.mdx'
 
 ### 9. 创建完成
 
-点击 **提交** 按钮，完成创建 Oracle 到 TDengine TSDB 的数据同步任务，回到**数据源列表****页面可查看任务执行情况。
+点击 **提交** 按钮，完成创建 Oracle 到 TDengine TSDB 的数据同步任务，回到**数据源列表**页面可查看任务执行情况。
