--- a/docs/en/assets/resources/_telegraf.mdx
+++ b/docs/en/assets/resources/_telegraf.mdx
@@ -1,6 +1,6 @@
-In the Telegraf configuration file (default location /etc/telegraf/telegraf.conf), add the configuration for the outputs.http output module:
+In the Telegraf configuration file (default location `/etc/telegraf/telegraf.conf`), add the configuration for the `outputs.http` output module:
 
-```
+```toml
 [[outputs.http]]
   url = "http://<taosAdapter's host>:<REST service port>/influxdb/v1/write?db=<database name>"
   ...
@@ -9,11 +9,11 @@ In the Telegraf configuration file (default location /etc/telegraf/telegraf.conf
   ...
 ```
 
-Where \<taosAdapter's host> should be filled with the domain name or IP address of the server running the taosAdapter service, \<REST service port> should be filled with the port of the REST service (default is 6041), \<TDengine's username> and \<TDengine's password> should be filled with the actual configuration of the running TDengine, and \<database name> should be filled with the database name where you want to save Telegraf data in TDengine.
+Where `<taosAdapter's host>` should be filled with the domain name or IP address of the server running the taosAdapter service, `<REST service port>` should be filled with the port of the REST service (default is 6041), `<TDengine's username>` and `<TDengine's password>` should be filled with the actual configuration of the running TDengine, and `<database name>` should be filled with the database name where you want to save Telegraf data in TDengine.
 
 Example as follows:
 
-```
+```toml
 [[outputs.http]]
   url = "http://127.0.0.1:6041/influxdb/v1/write?db=telegraf"
   method = "POST"
