--- a/docs/en/06-advanced/06-tdgpt/09-dev/02-algo/03-ad.md
+++ b/docs/en/06-advanced/06-tdgpt/09-dev/02-algo/03-ad.md
@@ -51,7 +51,7 @@ class _MyAnomalyDetectionService(AbstractAnomalyDetectionService):
 
 Save this file to the `./lib/taosanalytics/algo/ad/` directory and restart the `taosanode` service. In the TDengine CLI, run `SHOW ANODES FULL` to see your new algorithm. Your applications can now invoke this algorithm via SQL.
 
-```SQL
+```sql
 --- Detect anomalies in the `col` column using the newly added `myad` algorithm
 SELECT COUNT(*) FROM foo ANOMALY_WINDOW(col, 'algo=myad')
 ```
