docs: remove some invalid characters

--- a/docs/en/assets/resources/_macos_install.mdx
+++ b/docs/en/assets/resources/_macos_install.mdx
@@ -12,6 +12,6 @@ import PkgListV3 from "/components/PkgListV3";
 :::tip
 
 1. If the TDengine service is not deployed on the local machine and only the application driver is installed, then only `firstEP` needs to be configured in `taos.cfg`, there is no need to configure `FQDN` on the local machine.
-2. To prevent the “Unable to resolve FQDN” error when connecting to the server, it is recommended to ensure that the local `/etc/hosts` file has been configured with the correct FQDN value of the server, or that the DNS service has been properly set up.
+2. To prevent the "Unable to resolve FQDN" error when connecting to the server, it is recommended to ensure that the local `/etc/hosts` file has been configured with the correct FQDN value of the server, or that the DNS service has been properly set up.
 
 :::
