docs(go): add v3.7.7 release notes for WebSocket connection crash fix

--- a/docs/en/14-reference/05-connector/20-go.md
+++ b/docs/en/14-reference/05-connector/20-go.md
@@ -24,6 +24,7 @@ Supports Go 1.14 and above.
 
 | driver-go Version | Major Changes                                                                                   | TDengine Version   |
 |-------------------|-------------------------------------------------------------------------------------------------|--------------------|
+| v3.7.7            | Fix WebSocket connection crash caused by race condition.                                        | -                  |
 | v3.7.6            | Fix native connection stmt2 binding empty string and empty byte array crash.                    | -                  |
 | v3.7.5            | Fix native connection failures on Windows.                                                      | -                  |
 | v3.7.4            | Support for connection-level time zone settings.                                                | -                  |
