--- a/docs/zh/14-reference/05-connector/20-go.mdx
+++ b/docs/zh/14-reference/05-connector/20-go.mdx
@@ -25,6 +25,7 @@ import RequestId from "./_request_id.mdx";
 
 | driver-go 版本 | 主要变化                                       | TDengine TSDB 版本 |
 |--------------|--------------------------------------------|------------------|
+| v3.7.7       | 修复因竞态条件导致的 WebSocket 连接崩溃                  | -                |
 | v3.7.6       | 修复原生连接 stmt2 绑定空字符串和空字节数组崩溃                | -                |
 | v3.7.5       | 修复 Windows 上原生连接失败                         | -                |
 | v3.7.4       | 支持链接级别时区设置                                 | -                |
