--- a/docs/zh/14-reference/05-connector/30-python.mdx
+++ b/docs/zh/14-reference/05-connector/30-python.mdx
@@ -84,17 +84,18 @@ WebSocket Connector 历史版本：
 
 | WebSocket Connector 版本 | 主要变化                                                                              |   TDengine TSDB 版本    |
 | ----------------------- | ------------------------------------------------------------------------------------ | ----------------- |
+|          0.6.4           | 支持上报连接器版本信息                                                                  | - |
 |          0.6.3           | 支持配置 WebSocket 连接的响应超时时间（不含数据订阅）                                      | - |
 |          0.6.2           | 修复内存泄漏                                                                          | - |
-|          0.6.1           | 1. 支持 BLOB 数据类型 <br/> 2. 支持时区 <br/> 3. 支持负载均衡                       | - |
-|          0.5.3           | 支持 ipv6 地址格式                                                                       | - |
-|          0.5.2           | 升级 rust 连接器版本，修复了云服务连接的 token 问题                                       | - |
-|          0.5.1           | 支持 stmt2 参数绑定写入和查询                                                          | - |
+|          0.6.1           | 1. 支持 BLOB 数据类型 <br/> 2. 支持时区 <br/> 3. 支持负载均衡                             | - |
+|          0.5.3           | 支持 ipv6 地址格式                                                                    | - |
+|          0.5.2           | 升级 rust 连接器版本，修复了云服务连接的 token 问题                                        | - |
+|          0.5.1           | 支持 stmt2 参数绑定写入和查询                                                           | - |
 |          0.4.0           | 支持订阅新增参数动态扩展                                                                | - |
-|          0.3.9           | 修复 fetchmany 自定义行数时获取不完全的问题                                              | - |
-|          0.3.8           | 支持 SuperSet 连接到 TDengine TSDB 云服务实例                                               | - |
-|          0.3.5           | 修复 crypto provider 中的问题                                                         | - |
-|          0.3.4           | 支持 VARBINARY 和 GEOMETRY 数据类型                                                   | 3.3.0.0 及更高版本 |
+|          0.3.9           | 修复 fetchmany 自定义行数时获取不完全的问题                                               | - |
+|          0.3.8           | 支持 SuperSet 连接到 TDengine TSDB 云服务实例                                           | - |
+|          0.3.5           | 修复 crypto provider 中的问题                                                          | - |
+|          0.3.4           | 支持 VARBINARY 和 GEOMETRY 数据类型                                                    | 3.3.0.0 及更高版本 |
 |          0.3.2           | 优化 WebSocket sql 查询和插入性能，修改 readme 和 文档，修复已知问题                        | 3.2.3.0 及更高版本 |
 |          0.2.9           | 已知问题修复                                                                           | - |
 |          0.2.5           | 1. 数据订阅支持获取消费进度和重置消费进度 <br/> 2. 支持 schemaless <br/> 3. 支持 STMT        | - |
