docs: update taos-ws-py version to 0.6.5 and add TOTP/token authentication support in documentation

--- a/docs/zh/14-reference/05-connector/30-python.mdx
+++ b/docs/zh/14-reference/05-connector/30-python.mdx
@@ -84,6 +84,7 @@ WebSocket Connector 历史版本：
 
 | WebSocket Connector 版本 | 主要变化                                                                              |   TDengine TSDB 版本    |
 | ----------------------- | ------------------------------------------------------------------------------------ | ----------------- |
+|          0.6.5           | 支持 TOTP 身份验证和令牌身份验证                                                                  | - |
 |          0.6.4           | 支持上报连接器版本信息                                                                  | - |
 |          0.6.3           | 支持配置 WebSocket 连接的响应超时时间（不含数据订阅）                                      | - |
 |          0.6.2           | 修复内存泄漏                                                                          | - |
@@ -229,6 +230,8 @@ TDengine TSDB 目前支持时间戳、数字、字符、布尔类型，与 Pytho
       - `retry_backoff_ms`：连接失败时的初始等待时间（毫秒），默认为 200。此值会随着连续失败而指数增长，直到达到最大等待时间。
       - `retry_backoff_max_ms`：连接失败时的最大等待时间（毫秒），默认为 2000。
       - `read_timeout`：WebSocket 连接的响应超时时间（秒），不含数据订阅，默认为 300（5 分钟）。
+      - `totp_code`：用于基于时间的一次性密码（TOTP）身份验证
+      - `bearer_token`：用于令牌身份验证
   - **返回值**：连接对象。
   - **异常**：操作失败抛出 `ConnectionError` 异常。
 - `fn cursor(&self) -> PyResult<Cursor>`
