--- a/docs/en/assets/resources/_macos_install.mdx
+++ b/docs/en/assets/resources/_macos_install.mdx
@@ -11,7 +11,8 @@ import PkgListV37 from "/components/PkgListV37";
 
 :::tip
 
-1. If the TDengine service is not deployed on the local machine and only the application driver is installed, then only `firstEP` needs to be configured in `taos.cfg`, there is no need to configure `FQDN` on the local machine.
-2. To prevent the "Unable to resolve FQDN" error when connecting to the server, it is recommended to ensure that the local `/etc/hosts` file has been configured with the correct FQDN value of the server, or that the DNS service has been properly set up.
+1. Starting from version 3.4.0.0, the Enterprise Edition is not fully compatible with the Community Edition. To avoid compatibility issues when the two are interconnected, please ensure that you install the client driver corresponding to the server. Using a Community Edition driver to connect to an Enterprise Edition server will fail with error "Edition not compatible", and vice versa.
+2. If the TDengine service is not deployed on the local machine and only the application driver is installed, then only `firstEP` needs to be configured in `taos.cfg`, there is no need to configure `FQDN` on the local machine.
+3. To prevent the "Unable to resolve FQDN" error when connecting to the server, it is recommended to ensure that the local `/etc/hosts` file has been configured with the correct FQDN value of the server, or that the DNS service has been properly set up.
 
 :::
