--- a/docs/zh/14-reference/05-connector/20-go.mdx
+++ b/docs/zh/14-reference/05-connector/20-go.mdx
@@ -25,6 +25,7 @@ import RequestId from "./_request_id.mdx";
 
 | driver-go 版本 | 主要变化                                       | TDengine TSDB 版本 |
 |--------------|--------------------------------------------|------------------|
+| v3.7.8       | WebSocket 连接支持双因素认证以及 token 认证             | -                |
 | v3.7.7       | 修复因竞态条件导致的 WebSocket 连接崩溃                  | -                |
 | v3.7.6       | 修复原生连接 stmt2 绑定空字符串和空字节数组崩溃                | -                |
 | v3.7.5       | 修复 Windows 上原生连接失败                         | -                |
@@ -197,6 +198,8 @@ taos, err := sql.Open("taosWS", taosUri)
 - `readTimeout` 读取数据的超时时间，默认为 5m。
 - `writeTimeout` 写入数据的超时时间，默认为 10s。
 - `timezone` 指定连接使用的时区，sql 解析以及查询结果都会按照此时区进行转换，只支持 IANA 时区格式，特殊字符需要进行编码，以上海时区（`Asia/Shanghai`）为例：`timezone=Asia%2FShanghai`。
+- `bearerToken` 指定用于身份验证的 Bearer Token。
+- `totpCode` 指定用于双因素身份验证的 TOTP 码。
 
 ### 连接功能
 
