fix: correct spelling error in AVEVA Historian data configuration

--- a/docs/en/28-releases/03-notes/3.4.0.0.md
+++ b/docs/en/28-releases/03-notes/3.4.0.0.md
@@ -100,7 +100,7 @@ slug: /release-history/release-notes/3.4.0.0
  38. fix: errors occurring when modifying the internal table structure concurrently during schemaless writing
  39. fix: incorrect results when querying with state window and partition by
  40. fix: errors in the outer cols function of nested queries
- 41. fix: AVEVA Historian data in configration error
+ 41. fix: AVEVA Historian data in configuration error
  42. fix: resolve the crash issue when querying virtual tables that reference data columns of the same name but different types in sub-tables
  43. fix: abnormal data loading issue when upgrading from version 3.3.6.32-3.3.6.36 to 3.3.8.6-3.3.8.10
  44. fix: crash occurs occasionally during disk flushing for decimal-type data with NULL values when caching is enabled
@@ -109,4 +109,3 @@ slug: /release-history/release-notes/3.4.0.0
  47. fix: fix not found model in dsn error while creating pi tasks
  48. fix: fix taosgen coredump in case of inccorect csv format
  49. fix: crash occurs when stream triggers table creation without carrying written data
-
