fix: correct formatting issues in release notes for version 3.4.0.0

--- a/docs/zh/28-releases/03-notes/3.4.0.0.md
+++ b/docs/zh/28-releases/03-notes/3.4.0.0.md
@@ -51,7 +51,7 @@ description: 3.4.0.0 版本说明
  23. 优化：优化 OPC-DA 采集和重连
  24. 优化：执行计划支持显示标签索引
  25. 优化：show vgroups 命令新增 is_ready 列
- 26. 优化: stmt2 写入时新增布尔类型校验
+ 26. 优化：stmt2 写入时新增布尔类型校验
  27. 优化：调整 stmt2 的日志，便于问题定位
  28. 优化：流计算的事件窗口仅在满足 true_for 条件时生成窗口开启通知
  29. 优化：优化 RPC 通信过程中读写锁的使用逻辑
@@ -60,9 +60,9 @@ description: 3.4.0.0 版本说明
 ## 修复
 
   1. 修复：流计算触发数据重算时未使用最新的 WAL 版本号，导致计算结果错误的问题
-  2. 修复: order by abs (col) 中 col 出现在结果集而非表中时报错的问题
-  3. 修复: TAG 列类型为 JSON 时，show create table 及 SELECT distinct tbname, json_tag_name 查询结果不符合预期的问题
-  4. 修复：创建流语句解析输出表 tag 名时，误将反引号 (`) 纳入列名，与手动创建的表列名不匹配，导致报 “Out table tag type mismatch” 错误的问题
+  2. 修复：order by abs (col) 中 col 出现在结果集而非表中时报错的问题
+  3. 修复：TAG 列类型为 JSON 时，show create table 及 SELECT distinct tbname, json_tag_name 查询结果不符合预期的问题
+  4. 修复：创建流语句解析输出表 tag 名时，误将反引号 (`) 纳入列名，与手动创建的表列名不匹配，导致报“Out table tag type mismatch”错误的问题
   5. 修复：嵌套查询的子查询在逆序排序、无排序、非时间主键排序时查询结果错误
   6. 修复：数据订阅与 tdb 修改操作同时执行引发的并发问题
   7. 修复：OPCUA 修改任务时，下载点位数据失效
@@ -71,15 +71,15 @@ description: 3.4.0.0 版本说明
  10. 修复：修复查询内存管控时潜在的 crash 隐患
  11. 修复：流计算使用 FILL_HISTORY 计算历史数据失败的问题
  12. 修复：流计算读取数据报错导致后续计算任务持续等待的问题
- 13. 修复: JOIN 语法中子表时间主键为常量时无需再排序
+ 13. 修复：JOIN 语法中子表时间主键为常量时无需再排序
  14. 修复：Kafka 提取或拆分配置中 depth 错误
  15. 修复：修复流计算结果表已存在时的 schema 与 tag 同步失败问题
  16. 修复：订阅 rawdata 数据失败问题
  17. 修复：Explorer 默认上报监控信息
- 18. 修复: STMT2 写入自动建表时，表名过长导致 crash 的问题
- 19. 修复: 查询虚拟超级表时触发 "Invalid value in client" 错误的问题
+ 18. 修复：STMT2 写入自动建表时，表名过长导致 crash 的问题
+ 19. 修复：查询虚拟超级表时触发 "Invalid value in client" 错误的问题
  20. 修复：KingHistorian 实时订阅不能订阅到数据
- 21. 修复：使用 insert into stable语法写入数据时 tbname 处理逻辑存在错误的问题
+ 21. 修复：使用 insert into stable 语法写入数据时 tbname 处理逻辑存在错误的问题
  22. 修复：流计算通过 WebSocket 发送事件通知时存在概率性失败的问题
  23. 修复：部分 req_id 在其他组件中找不到的问题
  24. 修复：node.js 连接器默认不设置 timezone
@@ -87,24 +87,24 @@ description: 3.4.0.0 版本说明
  26. 修复：修改全局变量时事务无法结束的问题
  27. 修复：OPC-UA 点位数多时数据写入延迟明显
  28. 修复：多个虚拟表的列使用同一原始表列导致的逻辑错误
- 29. 修复: stmt 查询返回后回调函数未被调用导致 taosAdapter 崩溃的问题
+ 29. 修复：stmt 查询返回后回调函数未被调用导致 taosAdapter 崩溃的问题
  30. 修复：taosX 单条消息超过 100k 可能导致 SQL 超长
- 31. 修复: insert into select 语句写入数据时，数据被写入错误的 dnode 且触发 “Vnode is closed” 错误的问题
- 32. 修复: 流计算子查询中的关联查询包含 tag==%% n 条件会导致 coredump 的问题
+ 31. 修复：insert into select 语句写入数据时，数据被写入错误的 dnode 且触发“Vnode is closed”错误的问题
+ 32. 修复：流计算子查询中的关联查询包含 tag==%% n 条件会导致 coredump 的问题
  33. 修复：列拆分结果显示与预期不符
  34. 修复：C WebSocket taos_stmt2_get_fields 接口类型错误
  35. 修复：流计算中使用异常检测功能时调用了错误数据源
  36. 修复：通过 stmt2 执行查询语句时，若 dbname 和 tbname 均为`？`，导致查询进程卡住的问题
  37. 修复：InluxDB 无 tag 数据无法正常入库
- 38. 修复: schemaless 写入场景下，并发修改内部表结构产生错误
- 39. 修复: state window 结合 partition by 查询时返回结果错误的问题
+ 38. 修复：schemaless 写入场景下，并发修改内部表结构产生错误
+ 39. 修复：state window 结合 partition by 查询时返回结果错误的问题
  40. 修复：嵌套查询中外层 cols 函数执行出错的问题
  41. 修复：AVEVA Historian 数据写入任务配置页面异常
  42. 修复：虚拟表引用子表同名但不同类型数据列时查询会 crash 的问题
- 43. 修复: 从 3.3.6.32-3.3.6.36 升级至 3.3.8.6-3.3.8.10 时出现的数据加载异常问题
- 44. 修复: 开启缓存时，值为 NULL 的 decimal 类型数据落盘过程中偶发 crash 的问题
+ 43. 修复：从 3.3.6.32-3.3.6.36 升级至 3.3.8.6-3.3.8.10 时出现的数据加载异常问题
+ 44. 修复：开启缓存时，值为 NULL 的 decimal 类型数据落盘过程中偶发 crash 的问题
  45. 修复：客户端无法感知其他客户端对表结构的修改问题
  46. 修复：PI/PI Backfill 数据源包含句号时失败问题
  47. 修复：PI 创建任务报错 Not found model in DSN
  48. 修复：taosgen 导入特殊 csv 格式异常退出
- 49. 修复: 流计算触发建表时因未携带写入数据导致 crash 的问题
+ 49. 修复：流计算触发建表时因未携带写入数据导致 crash 的问题
