fix: correct typos in fix descriptions and improve clarity in release notes for version 3.4.0.0

--- a/docs/en/28-releases/03-notes/3.4.0.0.md
+++ b/docs/en/28-releases/03-notes/3.4.0.0.md
@@ -65,13 +65,13 @@ slug: /release-history/release-notes/3.4.0.0
   3. fix: the results of show create table and SELECT distinct tbname, json_tag_name are not as expected when the TAG column is of JSON type
   4. fix: when parsing the output table tag name in the stream creation statement, the backtick (`) was mistakenly taken as part of the column name, which did not match the column name of the table created manually via SQL, resulting in the "Ou
   5. fix: resolve incorrect query results when subqueries in nested queries use descending sorting, no sorting, or sorting by non-time primary key
-  6. tix: concurrency issue caused by modifying tdb while data subscription is in progress
+  6. fix: concurrency issue caused by modifying tdb while data subscription is in progress
   7. fix: OPCUA download data points not work when edit
   8. fix: support import alert dashboard for Grafana 12.x
   9. fix: the cache_load field of ins_vgroups is displayed as a negative value when it exceeds the maximum value of int32
  10. fix: potential crash risks during query memory control
  11. fix: stream fails to calculate historical data when using FILL_HISTORY
- 12. fx: stream errors when reading data cause subsequent computing tasks to wait
+ 12. fix: stream errors when reading data cause subsequent computing tasks to wait
  13. fix: no longer require sorting when the time primary key of sub-tables in JOIN syntax is a constant
  14. fix: Kafka extract/split with depth error
  15. fix: schema and tag synchronization issue when the stream result table already exists
