fix: refine descriptions of latency and error issues in release notes for version 3.4.0.0

--- a/docs/en/28-releases/03-notes/3.4.0.0.md
+++ b/docs/en/28-releases/03-notes/3.4.0.0.md
@@ -86,10 +86,10 @@ slug: /release-history/release-notes/3.4.0.0
  24. fix: node.js support no timezone on window
  25. fix: Explorer login error without subpath
  26. fix: transactions cannot end when modifying global variables
- 27. fix: fix latency issue in opc-ua
+ 27. fix: latency issue in opc-ua
  28. fix: logic error caused by columns of multiple virtual tables using the same original table column
  29. fix: taosAdapter crash caused by callback function not being called after stmt query returns
- 30. fix: taosX my cause sql too long with 100k message per row
+ 30. fix: taosX may cause sql too long with 100k message per row
  31. fix: data is written to an incorrect dnode and triggers the "Vnode is closed" error when executing insert into select statements
  32. fix: coredump occurs when the join query in stream subquery contains the tag==%%n condition
  33. fix: unexpected split result in transform
@@ -106,6 +106,6 @@ slug: /release-history/release-notes/3.4.0.0
  44. fix: crash occurs occasionally during disk flushing for decimal-type data with NULL values when caching is enabled
  45. fix: client cannot perceive table schema modifications made by other clients
  46. fix: PI/PI-Backfill ingestion error with period sign
- 47. fix: fix not found model in dsn error while creating pi tasks
- 48. fix: fix taosgen coredump in case of inccorect csv format
+ 47. fix: not found model in dsn error while creating pi tasks
+ 48. fix: taosgen coredump in case of incorect csv format
  49. fix: crash occurs when stream triggers table creation without carrying written data
