fix: correct spelling of InfluxDB in release notes for version 3.4.0.0

--- a/docs/en/28-releases/03-notes/3.4.0.0.md
+++ b/docs/en/28-releases/03-notes/3.4.0.0.md
@@ -40,7 +40,7 @@ slug: /release-history/release-notes/3.4.0.0
  11. enh: Linux tar package supports non-root installation of TDengine TSDB with custom install path
  12. enh: after modifying tag columns, support data subscription to take effect without reconstruction by executing the RELOAD TOPIC command
  13. enh: support recording operations such as query and deletion in audit logs
- 14. enh: add the client version number field to the show connections command.
+ 14. enh: add the client version number field to the show connections command
  15. enh: add status and note fields to the ins_anodes_full table for real-time feedback on model and algorithm status
  16. enh: add two Hints parameters (WIN_OPTIMIZE_BATCH and WIN_OPTIMIZE_SINGLE) to improve the state window query performance of virtual tables
  17. enh: support encryption algorithm management [Enterprise Edition]
@@ -63,7 +63,7 @@ slug: /release-history/release-notes/3.4.0.0
   1. fix: the latest WAL version number was not used when stream triggered data recalculation, resulting in incorrect calculation results
   2. fix: query error when col in order by abs(col) exists in result set instead of table
   3. fix: the results of show create table and SELECT distinct tbname, json_tag_name are not as expected when the TAG column is of JSON type
-  4. fix: when parsing the output table tag name in the stream creation statement, the backtick (`) was mistakenly taken as part of the column name, which did not match the column name of the table created manually via SQL, resulting in the "Ou
+  4. fix: when parsing the output table tag name in the stream creation statement, the backtick (`) was mistakenly taken as part of the column name, which did not match the column name of the table created manually via SQL, resulting in the "Out table tag type mismatch" error
   5. fix: resolve incorrect query results when subqueries in nested queries use descending sorting, no sorting, or sorting by non-time primary key
   6. fix: concurrency issue caused by modifying tdb while data subscription is in progress
   7. fix: OPCUA download data points not work when edit
