--- a/docs/zh/28-releases/03-notes/3.4.0.0.md
+++ b/docs/zh/28-releases/03-notes/3.4.0.0.md
@@ -95,7 +95,7 @@ description: 3.4.0.0 版本说明
  34. 修复：C WebSocket taos_stmt2_get_fields 接口类型错误
  35. 修复：流计算中使用异常检测功能时调用了错误数据源
  36. 修复：通过 stmt2 执行查询语句时，若 dbname 和 tbname 均为`？`，导致查询进程卡住的问题
- 37. 修复：InluxDB 无 tag 数据无法正常入库
+ 37. 修复：InfluxDB 无 tag 数据无法正常入库
  38. 修复：schemaless 写入场景下，并发修改内部表结构产生错误
  39. 修复：state window 结合 partition by 查询时返回结果错误的问题
  40. 修复：嵌套查询中外层 cols 函数执行出错的问题
