fix: correct spelling error in taosgen coredump description in release notes for version 3.4.0.0

--- a/docs/en/28-releases/03-notes/3.4.0.0.md
+++ b/docs/en/28-releases/03-notes/3.4.0.0.md
@@ -107,5 +107,5 @@ slug: /release-history/release-notes/3.4.0.0
  45. fix: client cannot perceive table schema modifications made by other clients
  46. fix: PI/PI-Backfill ingestion error with period sign
  47. fix: not found model in dsn error while creating pi tasks
- 48. fix: taosgen coredump in case of incorect csv format
+ 48. fix: taosgen coredump in case of incorrect csv format
  49. fix: crash occurs when stream triggers table creation without carrying written data
