docs: add connector compatibility desc Closes: 6659972418

--- a/docs/zh/14-reference/05-connector/_connector_type.mdx
+++ b/docs/zh/14-reference/05-connector/_connector_type.mdx
@@ -7,7 +7,7 @@ TDengine TSDB 提供了丰富的应用程序开发接口。为便于用户快速
 
 如上面的架构图所示，我们有三种方式来访问 TDengine TSDB：
 
-1. WebSocket 连接：通过连接器使用 taosAdapter 组件提供的 WebSocket API 建立与 taosd 的连接，这种连接方式下文中简称“WebSocket 连接”。 **推荐使用 WebSocket 连接**。
+1. WebSocket 连接：通过连接器使用 taosAdapter 组件提供的 WebSocket API 建立与 taosd 的连接，这种连接方式下文中简称“WebSocket 连接”。该方式提供**兼容性保证**——所有支持该连接方式的连接器均兼容 TDengine TSDB 3.3.6.0 及以上服务端。各连接器需满足以下最低版本要求即可享受该保障：Rust 无特殊要求、Java ≥3.6.0、Go ≥3.7.0、Python taos-ws-py ≥0.6.1、Node.js ≥3.2.2、C# ≥3.1.7、C/C++/ODBC ≥3.3.6.0。**推荐使用 WebSocket 连接**。
 2. 原生连接：通过连接器使用客户端驱动程序 taosc 直接与服务端程序 taosd 建立连接，这种连接方式下文中简称“原生连接”。
 3. REST API：不使用连接器，通过 HTTP 客户端直接调用 taosAdapter 组件提供的 REST API 建立与 taosd 的连接，这种连接方式下文中简称“REST API”。
 
