--- a/docs/en/assets/resources/_connector_type.mdx
+++ b/docs/en/assets/resources/_connector_type.mdx
@@ -7,7 +7,7 @@ The following is the architecture diagram of the connection methods between TDen
 
 As shown in the architecture diagram above, there are three ways to access TDengine TSDB:
 
-1. WebSocket connection: Establish a connection with taosd through the WebSocket API provided by the taosAdapter component using a connector. This connection method is referred to as "WebSocket connection" in the following text. **WebSocket connection is recommended**.
+1. WebSocket connection: Establish a connection with taosd through the WebSocket API provided by the taosAdapter component using a connector. This connection method is referred to as "WebSocket connection" in the following text. This method provides a **compatibility guarantee**. All connectors supporting this connection method are compatible with TDengine TSDB 3.3.6.0 and later server versions. To enjoy this guarantee, each connector must meet the following minimum version requirements: Rust has no special requirements, Java ≥3.6.0, Go ≥3.7.0, Python taos-ws-py ≥0.6.1, Node.js ≥3.2.2, C# ≥3.1.7, and C/C++/ODBC ≥3.3.6.0. **WebSocket connection is recommended**.
 2. Native connection: Establish a direct connection with the server program taosd through the client driver taosc using a connector. This connection method is referred to as "native connection" in the following text.
 3. REST API: Establish a connection with taosd by directly calling the REST API provided by the taosAdapter component using an HTTP client, without using a connector. This connection method is referred to as "REST API" in the following text.
 
