docs: update 336 pkglist

--- a/docs/en/assets/resources/_linux_install.mdx
+++ b/docs/en/assets/resources/_linux_install.mdx
@@ -1,8 +1,8 @@
-import PkgListV3 from "/components/PkgListV3";
+import PkgList from "/src/components/PkgList";
 
 1. Download the client installation package
-  
-  <PkgListV3 type={1} sys="Linux" />
+
+   <PkgList productName="TDengine TSDB-OSS Client" version="3.3.6.13" platform="Linux-Generic"/>
 
 2. Unzip the software package
 
