docs: update 338 pkglist

--- a/docs/en/assets/resources/_linux_install.mdx
+++ b/docs/en/assets/resources/_linux_install.mdx
@@ -1,8 +1,8 @@
-import PkgListV37 from "/components/PkgListV37";
+import PkgList from "/src/components/PkgList";
 
 1. Download the client installation package
 
-  <PkgListV37 productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="Linux-Generic" pkgType="Client"/>
+   <PkgList productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="Linux-Generic"/>
 
 2. Unzip the software package
 
