--- a/docs/en/assets/resources/_windows_install.mdx
+++ b/docs/en/assets/resources/_windows_install.mdx
@@ -1,8 +1,8 @@
-import PkgListV37 from "/components/PkgListV37";
+import PkgList from "/src/components/PkgList";
 
 1. Download the client installation package
 
-  <PkgListV37 productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="Windows" pkgType="Client"/>
+   <PkgList productName="TDengine TSDB-OSS Client" version="3.4.0.0" platform="Windows" />
 
 2. Run the installer, follow the prompts to select the default values, and complete the installation
 3. Installation path
