docs: use default version

--- a/docs/en/assets/resources/_macos_install.mdx
+++ b/docs/en/assets/resources/_macos_install.mdx
@@ -2,7 +2,7 @@ import PkgList from "/src/components/PkgList";
 
 1. Download the client installation package
 
-   <PkgList productName="TDengine TSDB-OSS Client" version="3.3.6.13" platform="macOS"/>
+   <PkgList productName="TDengine TSDB-OSS Client" platform="macOS"/>
 
 2. Run the installer and follow the prompts to select the default values to complete the installation. If the installation is blocked, you can right-click or press Ctrl and click on the installation package, then choose `Open`.
 3. Configure taos.cfg
