--- a/docs/en/assets/resources/_windows_install.mdx
+++ b/docs/en/assets/resources/_windows_install.mdx
@@ -2,7 +2,7 @@ import PkgList from "/src/components/PkgList";
 
 1. Download the client installation package
 
-   <PkgList productName="TDengine TSDB-OSS Client" version="3.3.6.13" platform="Windows"/>
+   <PkgList productName="TDengine TSDB-OSS Client" platform="Windows"/>
 
 2. Run the installer, follow the prompts to select the default values, and complete the installation
 3. Installation path
