--- a/docs/en/assets/resources/_linux_install.mdx
+++ b/docs/en/assets/resources/_linux_install.mdx
@@ -2,7 +2,7 @@ import PkgList from "/src/components/PkgList";
 
 1. Download the client installation package
 
-   <PkgList productName="TDengine TSDB-OSS Client" version="3.3.8.8" platform="Linux-Generic"/>
+   <PkgList productName="TDengine TSDB-OSS Client" platform="Linux-Generic" />
 
 2. Unzip the software package
 
